--- a/WiU Landing Page Template/index.html
+++ b/WiU Landing Page Template/index.html
@@ -19,12 +19,10 @@
   </header>
   
   <section class="main">
-    <figure>
   	  <h2 class="desc-title">About This Page</h2>
-    	<p class="description"> Welcome to Worldsurf.com where we provide you with the latest reports on all things surfing. Please take a few moments of your time to take the tests we've prepared down below. Thank you. </p>
-      	<img src="img/main.jpg" alt="main image"  />
-      	<figcaption><p><em>Surfing in the sunset</em></p></figcaption>
-    </figure>
+      <p class="description"> Welcome to Worldsurf.com where we provide you with the latest reports on all things surfing. Please take a few moments of your time to take the tests we've prepared down below. Thank you. </p>
+      <img src="img/main.jpg" alt="main image"  />
+      <p><em>Surfing in the sunset</em></p>
   </section>
   
   <section class="sec">
@@ -38,8 +36,8 @@
        </thead>
        <tbody>
           <tr class="odd">
-             <td><a href="#">Link to test 1 here</a></td>
-             <td><a href="">Link to test results 1</a></td>
+             <td><a href="https://usabilityhub.com/preview/c9fee14530d">Link to test 1 here</a></td>
+             <td><a href="https://usabilityhub.com/tests/c9fee14530d/results/1564a0256bb2">Link to test results 1</a></td>
           </tr>
           <tr>
              <td><a href="#">Link to test 2 here</a></td>
