--- a/WiU Landing Page Template/index.html
+++ b/WiU Landing Page Template/index.html
@@ -20,7 +20,7 @@
   
   <section class="main">
   	  <h2 class="desc-title">About This Page</h2>
-      <p class="description"> Welcome to Worldsurf.com where we provide you with the latest reports on all things surfing. Please take a few moments of your time to take the tests we've prepared down below. Thank you. </p>
+      <p class="description"> Welcome to Worldsurf.com. We will provide you with the latest reports on all things surfing. Please take a few moments of your time to take the tests we've prepared down below. Thank you. </p>
       <img src="img/main.jpg" alt="main image"  />
       <p><em>Surfing in the sunset</em></p>
   </section>
