--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <div id="wrapper">
   <header>
-     <h1>Welcome to Worldsurf!</h1>
+     <h1>Welcome to Worldsurf.com!</h1>
   </header>
   
   <section class="main">
-  	  <h2 class="desc-title">About This Page</h2>
-      <p class="description"> Welcome to Worldsurf.com. We will provide you with the latest reports on all things surfing. Please take a few moments of your time to take the tests we've prepared down below. Thank you. </p>
+  	  <h2 class="desc-title">About Worldsurf</h2>
+      <p class="description"> Welcome to Worldsurf's official website. We will provide you with the latest reports on all things surfing. Please take a few moments of your time to take the tests we've prepared down below. Thank you. </p>
       <img src="img/main.jpg" alt="main image"  />
       <p><em>Surfing in the sunset</em></p>
   </section>
@@ -66,7 +66,7 @@
     </table>
   </section>
   
-  <footer> &copy; 2013 your name goes here</footer>
+  <footer> &copy; 2013 Allison Sharpe</footer>
   </div> <!-- #wrapper div ends here-->
 </body>
 </html>
