--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
              <td><a href="">Link to test results 2</a></td>
           </tr>
           <tr class="odd">
-             <td><a href="#">Link to test 3 here</a></td>
-             <td><a href="">Link to test results 3</a></td>
+             <td><a href="https://usabilityhub.com/preview/3a16628e2ced">Link to test 3 here</a></td>
+             <td><a href="https://usabilityhub.com/tests/3a16628e2ced/results/7645cfb90e5d">Link to test results 3</a></td>
           </tr>
           <tr>
              <td><a href="#">Link to test 4 here</a></td>
