--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
              <td><a href="https://usabilityhub.com/tests/c9fee14530d/results/1564a0256bb2">Link to test results 1</a></td>
           </tr>
           <tr>
-             <td><a href="#">Link to test 2 here</a></td>
-             <td><a href="">Link to test results 2</a></td>
+             <td><a href="https://usabilityhub.com/preview/8be172f2e7f0">Link to test 2 here</a></td>
+             <td><a href="https://usabilityhub.com/tests/8be172f2e7f0/results/655bab502658">Link to test results 2</a></td>
           </tr>
           <tr class="odd">
              <td><a href="https://usabilityhub.com/preview/3a16628e2ced">Link to test 3 here</a></td>
