--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
        </thead>
        <tbody>
           <tr class="odd">
-             <td><a href="https://usabilityhub.com/preview/c9fee14530d">Link to test 1 here</a></td>
-             <td><a href="https://usabilityhub.com/tests/c9fee14530d/results/1564a0256bb2">Link to test results 1</a></td>
+             <td><a href="https://usabilityhub.com/preview/c9fee14530d">Link to B1 & B2 test</a></td>
+             <td><a href="https://usabilityhub.com/tests/c9fee14530d/results/1564a0256bb2">Link to B1 & B2 test results</a></td>
           </tr>
           <tr>
-             <td><a href="https://usabilityhub.com/preview/8be172f2e7f0">Link to test 2 here</a></td>
-             <td><a href="https://usabilityhub.com/tests/8be172f2e7f0/results/655bab502658">Link to test results 2</a></td>
+             <td><a href="https://usabilityhub.com/preview/8be172f2e7f0">Link to B3 test</a></td>
+             <td><a href="https://usabilityhub.com/tests/8be172f2e7f0/results/655bab502658">Link to B3 test results</a></td>
           </tr>
           <tr class="odd">
-             <td><a href="https://usabilityhub.com/preview/3a16628e2ced">Link to test 3 here</a></td>
-             <td><a href="https://usabilityhub.com/tests/3a16628e2ced/results/7645cfb90e5d">Link to test results 3</a></td>
+             <td><a href="https://usabilityhub.com/preview/3a16628e2ced">Link to B4 test</a></td>
+             <td><a href="https://usabilityhub.com/tests/3a16628e2ced/results/7645cfb90e5d">Link to B4 test results</a></td>
           </tr>
           <tr>
              <td><a href="#">Link to test 4 here</a></td>
