--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
              <td><a href="https://usabilityhub.com/tests/3a16628e2ced/results/7645cfb90e5d">Link to B4 test results</a></td>
           </tr>
           <tr>
-             <td><a href="#">Link to test 4 here</a></td>
-             <td><a href="#">Link to test results 4</a></td>
+             <td><a href="https://usabilityhub.com/preview/bf73fff8c227">Link to B5 test</a></td>
+             <td><a href="https://usabilityhub.com/tests/bf73fff8c227/results/fd2b451cca03">Link to B5 test results</a></td>
           </tr>
           <tr class="odd">
-             <td><a href="#">Link to test 5 here</a></td>
-             <td><a href="#">Link to test results 5</a></td>
+             <td><a href="https://usabilityhub.com/preview/dd0218b18341">Link to B6 test</a></td>
+             <td><a href="https://usabilityhub.com/tests/dd0218b18341/results/2322ca0b80ef">Link to B6 test results</a></td>
           </tr>
           <!-- start link -->
           <tr>
