--- a/index.html
+++ b/index.html
@@ -55,18 +55,19 @@
              <td><a href="https://usabilityhub.com/preview/dd0218b18341">Link to B6 test</a></td>
              <td><a href="https://usabilityhub.com/tests/dd0218b18341/results/2322ca0b80ef">Link to B6 test results</a></td>
           </tr>
-          <!-- start link -->
           <tr>
-             <td><a href="#">Link to test 6 here</a></td>
-             <td><a href="#">Link to test results 6</a></td>
+             <td><a href="https://usabilityhub.com/preview/fb1803d22fa9">Link to B7 test</a></td>
+             <td><a href="https://usabilityhub.com/tests/fb1803d22fa9/results/fd4b18fd19c">Link to B7 test results</a></td>
           </tr>
-          <!-- end link -->
-          <!-- to add a new link copy from start link to end link and paste here-->
+          <tr>
+             <td><a href="">Link to B8 test</a></td>
+             <td><a href="">Link to B8 test results</a></td>
+          </tr>
        </tbody>
     </table>
   </section>
   
-  <footer> &copy; 2013 Allison Sharpe</footer>
+  <footer> &copy; 2015 Allison Sharpe</footer>
   </div> <!-- #wrapper div ends here-->
 </body>
 </html>
