--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
              <td><a href="https://usabilityhub.com/tests/fb1803d22fa9/results/fd4b18fd19c">Link to B7 test results</a></td>
           </tr>
           <tr>
-             <td><a href="">Link to B8 test</a></td>
-             <td><a href="">Link to B8 test results</a></td>
+             <td><a href="#">Link to B8 test</a></td>
+             <td><a href="#">Link to B8 test results</a></td>
           </tr>
        </tbody>
     </table>
